# fprime-python

./: README.md  fprime-python.cmake  library.cmake  pyproject.toml  requirements.txt
FprimePython/: CMakeLists.txt  FprimePy.cpp  FprimePython.cpp  FprimePython.hpp
FprimePython/PythonConsole/: CMakeLists.txt  Console.cpp  Console.hpp  DefaultConsole.cpp
FprimePython/PythonRateGroupDriver/: CMakeLists.txt  PythonRateGroupDriver.fpp  PythonRateGroupDriver.py  PythonRateGroupDriver.template.py
FprimePython/PythonRateGroupDriver/docs/: sdd.md
autocode/: pybind_gen.py
autocode/templates/: ComponentTemplate.py.j2  PyBindAc.cpp.j2  PyBindAc.hpp.j2  fprime_pybind.py.j2
cmake/autocoder/: fprime_python.cmake  test  test-sequencer
cmake/autocoder/fprime_python/: __main__.py  binding_generator.py  component_generator.py  generator.py  pybind11_generator.py  types_generator.py  visitor.py
fprime-python/: fprime-python.hpp
fprime-python/FprimePy/: CMakeLists.txt  FprimePy.cpp  FprimePy.hpp
src/fprime_python/: runner.py
src/fprime_python/autocode/: __main__.py  binding_generator.py  component_generator.py  constants.py  data_helpers.py  include.py  pybind11_generator.py  topology_instance_generator.py  types_generator.py  visitor.py
